Apply suggestions from code review
Co-authored-by: Kelsey Steven <97124999+kelsey-steven-ada@users.noreply.github.com>

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -11,7 +11,7 @@ Our goal for this lesson is to learn how to handle errors for the `GET`&nbsp;`/b
 
 In this lesson we will extend our Hello Books API to handle the following error cases for the RESTful route `GET` `/books/<book_id>`:
 
-1. If no `book` record matches the `book_id`, the server will return a `404` response code with a message indicating that there are no `book`s with `book_id`.
+1. If no `Book` record matches the `book_id`, the server will return a `404` response code with a message indicating that there are no `Book`s with `book_id`.
 1. If `book_id` is not of type `int`, the server will return a `400` response code with a message indicating `book_id` is invalid.
 
 ## Branches
@@ -69,7 +69,9 @@ def get_one_book(book_id):
             }
 ```
 
-There is a single explicit `return` in this function, but we only reach it if the condition `book.id == book_id` is `True`. That is, we need to find a book with a matching ID in order for the `return` to execute. If we never find a book with a matching ID, the loop will complete without returning anything. As we know, in Python, a function that completes without an explicit `return` statement behaves like it returned `None`.
+There is a single explicit `return` in this function, but we only reach it if the condition `book.id == book_id` is `True`. That is, we need to find a book with a matching ID in order for the `return` to execute. If we never find a book with a matching ID, the loop will complete without returning anything, eventually reaching the end of the function.
+
+As we know, in Python, a function that completes without an explicit `return` statement still returns `None` behind the scenes. This behavior is what Flask is seeing, which triggers the error message.
 
 ### Handling a non-existing book: Preparation
 
@@ -133,7 +135,7 @@ We should verify that the we receive the correct response body and code for a no
 
 ## Handling an invalid `book_id`
 
-Let's examine the error we get to a `GET` request to `/books/hello-world`, an invalid `book_id`, in our browser.
+Let's examine the error we receive when making a `GET` request to `/books/hello-world`, an invalid `book_id`, in our browser.
 
 ![Invalid book_id response in browser](../assets/api-2-read-error/400-invalid-book-error.png)  
 *Fig. Error displayed by Flask in Debug mode when accessing an a book id that doesn't "look" like a book id. ([Original Image](../assets/api-2-read-error/400-invalid-book-error.png))*
@@ -263,7 +265,7 @@ If some other truly unexpected error were to occur in our `try` block, it would 
 
 ### !end-callout
 
-Let's verify that the we now receive the correct response body and code for an invalid `book_id`. We can do this by making the request in our browser and viewing the server logs.
+Let's verify that we now receive the correct response body and code for an invalid `book_id`. We can do this by making the request in our browser and viewing the server logs.
 
 <br>
 
@@ -275,7 +277,7 @@ Let's verify that the we now receive the correct response body and code for an i
 
 ## Refactor with Helper function
 
-Our `GET` `/books/<book_id>` endpoint now correctly handles `404` and `400` level responses. We may notice that our `handle_book(book_id)` route function is getting a bit long. The more code we add, the less clear it becomes that this route is really just trying to find a single book and return its details.
+Our `GET` `/books/<book_id>` endpoint now correctly handles `404` and `400` level responses. We may notice that our `get_one_book(book_id)` route function is getting a bit long. The more code we add, the less clear it becomes that this route is really just trying to find a single book and return its details.
 
 Wouldn't it be great if we had a separate function that could find a single book with all the error handling taken care of? Then our route function could just call that function and return the formatted book details. In later lessons, we'll also see that placing this logic in a separate function will make it easier to test. It may even become the basis for a more general function that can be used in other parts of our code, which would be more difficult to do if the logic remained "trapped" in our route, if we even notice the opportunity at all.
 
