--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -11,8 +11,8 @@ Our goal for this lesson is to learn how to handle errors for the `GET`&nbsp;`/b
 
 In this lesson we will extend our Hello Books API to handle the following error cases for the RESTful route `GET` `/books/<book_id>`:
 
-1. If no `Book` record matches the `book_id`, the server will return a `404` response code with a message indicating that there are no `Book`s with `book_id`.
-1. If `book_id` is not of type `int`, the server will return a `400` response code with a message indicating `book_id` is invalid.
+1. If no `Book` record matches the `book_id`, the server will return a `404 Not Found` response code with a message indicating that there are no `Book`s with `book_id`.
+2. If `book_id` is not of type `int`, the server will return a `400 Bad Request` response code with a message indicating `book_id` is invalid.
 
 ## Branches
 
@@ -75,7 +75,7 @@ As we know, in Python, a function that completes without an explicit `return` st
 
 ### Handling a non-existing book: Preparation
 
-To handle this scenario, we should return a response with a response body indicating that the book with `book_id` was not found and a `404` response code, which is the standard code to indicate that a resource was not found.
+To handle this scenario, we should return a response with a response body indicating that the book with `book_id` was not found and a `404 Not Found` response code, which is the standard code to indicate that a resource was not found.
 
 <!-- prettier-ignore-start -->
 | Endpoint Detail | Notes |
@@ -193,7 +193,7 @@ So when debugging an error, the Traceback can be a helpful guide, but it's not a
 
 ### Handling an invalid `book_id`: Preparation
 
-To handle this scenario, we should return a response with a response body indicating that the book with `book_id` is invalid and a `400` response code.
+To handle this scenario, we should return a response with a response body indicating that the book with `book_id` is invalid and a `400 Bad Request` response code.
 
 <!-- prettier-ignore-start -->
 | Endpoint Detail | Notes |
