includes discussion of the Response class

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -333,6 +333,21 @@ def validate_book(book_id):
 | `abort(make_response(`&ZeroWidthSpace;`response, 404))` | If the loop completes without returning, the book ID was not found. `abort`, and return a `404` response. |
 <!-- prettier-ignore-end -->
 
+## Working with Flask `Response`s
+
+`Response` is a Flask class that represents HTTP responses. Ultimately, anything Flask sends back to a client gets represented as an instance of `Response`. Most of the time, we won't need to work with a `Response` directly, since Flask also allows us to return other values from routes, such as `dict`s and `list`s, and Flask takes care of using them to build a `Response`. But in specific cases, such as our call to `abort` above, we need an actual `Response` instance. One way of doing this is to instantiate a `Response` directly using its constructor.
+
+Flask also provides the helper method `make_response`, which is a little bit more flexible in the arguments it can accept than if we used the `Response` constructor ourselves, so we'll be using `make_response` instead. But we should be aware that it's still creating a `Response` instance internally. We can think of `make_response` as sort of a convenience constructor for `Response`.
+
+For more information about the `Response` class we can refer to the following reference documents.
+
+- [Flask's definition of `Response`](https://flask.palletsprojects.com/en/3.0.x/api/#response-objects)
+- [Flask's quickstart guide on creating responses](https://flask.palletsprojects.com/en/3.0.x/quickstart/#about-responses), which notably does _not_ feature the `Response` class
+
+There are a variety of ways to create `Response` instances in Flask, some implicit and some explicit. The previous resource links will provide a good starting point for exploring further!
+
+## Using Our Helper Function
+
 With the `validate_book` function in place, we can update our `get_one_book` function to use it.
 
 ```python
