Apply suggestions from code review
Co-authored-by: Kelsey Steven <97124999+kelsey-steven-ada@users.noreply.github.com>

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -275,7 +275,7 @@ Let's verify that we now receive the correct response body and code for an inval
 ![400 Server Log](../assets/api-2-read-error/400-server-log.png)  
 *Fig. Server log showing that the request for an invalid book ID results in a 400 status.*
 
-## Refactor with Helper function
+## Refactor Error Handling to a Helper Function
 
 Our `GET` `/books/<book_id>` endpoint now correctly handles `404` and `400` level responses. We may notice that our `get_one_book(book_id)` route function is getting a bit long. The more code we add, the less clear it becomes that this route is really just trying to find a single book and return its details.
 
@@ -287,7 +287,7 @@ While such a function doesn't exist in our project yet, we're coders! We can mak
 
 ## Set Aside Practice Time to Look for Refactors
 
-We shouldn't worry if we don't see the need for a helper function right away. It's a skill that comes with experience. As we write more code, we'll get a feeling for more patterns that can be extracted into separate functions. While splitting up our logic might make a project feel more complex at first, it will make it easier to maintain and extend as the project grows.
+We shouldn't worry if we don't see the need for a helper function right away. As we write more code, we'll get a feeling for which patterns can be extracted into separate functions. While splitting up our logic might make a project feel more complex at first, it will make it easier to maintain and extend as the project grows.
 
 <br />
 
@@ -295,7 +295,7 @@ While we are electing to perform this refactor now, it's often more common to wa
 
 <br />
 
-The more experience we gain, the better we'll become at recognizing refactors that are likely to be helpful even before we have multiple instances of similar code. This is a skill that comes with time and practice, so don't worry if it doesn't come naturally at first. To help us develop this skill, it can be beneficial to set aside specific time to review our code and actively look for repetition that might be a hint that a refactor is needed. We'll see further refactoring examples in later lessons.
+The more experience we gain, the better we'll become at recognizing refactors that are likely to be helpful, even before we have multiple instances of similar code. To help us develop this skill, it can be beneficial to set aside specific time to review our code and actively look for repetition that might be a hint that a refactor is needed. We'll see further refactoring examples in later lessons.
 
 ### !end-callout
 
@@ -335,16 +335,14 @@ def validate_book(book_id):
 
 ## Working with Flask `Response`s
 
-`Response` is a Flask class that represents HTTP responses. Ultimately, anything Flask sends back to a client gets represented as an instance of `Response`. Most of the time, we won't need to work with a `Response` directly, since Flask also allows us to return other values from routes, such as `dict`s and `list`s, and Flask takes care of using them to build a `Response`. But in specific cases, such as our call to `abort` above, we need an actual `Response` instance. One way of doing this is to instantiate a `Response` directly using its constructor.
+`Response` is a Flask class that represents HTTP responses. Ultimately, anything Flask sends back to a client gets represented as an instance of `Response`. Most of the time, we won't need to work with a `Response` directly. Flask allows us to return other values from routes, such as `dict`s and `list`s, and Flask takes care of using them to build a `Response`. But in specific cases, such as our call to `abort` above, we need an actual `Response` instance! 
 
-Flask also provides the helper method `make_response`, which is a little bit more flexible in the arguments it can accept than if we used the `Response` constructor ourselves, so we'll be using `make_response` instead. But we should be aware that it's still creating a `Response` instance internally. We can think of `make_response` as sort of a convenience constructor for `Response`.
+While it's possible to create a `Response` object directly using its constructor, Flask also provides the helper method `make_response`, which is a little bit more flexible than the constructor in the arguments it can accept. So here, we're using `make_response`, but we should be aware that Flask is still creating a `Response` instance internally. We can think of `make_response` as sort of a convenience constructor for `Response`.
 
-For more information about the `Response` class we can refer to the following reference documents.
+There are a variety of ways to create `Response` instances in Flask, some implicit and some explicit. The resource links below will provide a good starting point for exploring further! 
 
 - [Flask's definition of `Response`](https://flask.palletsprojects.com/en/3.0.x/api/#response-objects)
 - [Flask's quickstart guide on creating responses](https://flask.palletsprojects.com/en/3.0.x/quickstart/#about-responses), which notably does _not_ feature the `Response` class
-
-There are a variety of ways to create `Response` instances in Flask, some implicit and some explicit. The previous resource links will provide a good starting point for exploring further!
 
 ## Using Our Helper Function
 
